--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "lightningcss": "^1.30.1",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "terser": "^5.41.0",
     "typescript": "^5.2.2",
-    "vite": "^4.5.0"
+    "vite": "^6.3.5"
   }
 }
