--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "tailwindcss": "^3.3.5",
     "terser": "^5.41.0",
     "typescript": "^5.2.2",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-html": "^3.2.2"
   }
 }
