Dockerised the application to allow users to self-host it if they want to

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "description": "Strip AI - De-AI-fy your text",
   "repository": "https://github.com/foxleigh81/strip-ai",
   "author": {
     "name": "Alexander Foxleigh",
